# weather-cli

./: Cargo.toml  README.md
src/: forecast.rs  main.rs  modify_forecast.rs  sample.txt
